<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:textSize="30sp"
        android:textColor="@android:color/primary_text_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_generated_number_is"/>

    <TextView
        android:textStyle="bold"
        android:id="@+id/generatedNumber"
        android:textSize="50sp"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_placeholder"/>

    <GridLayout
        android:layout_marginVertical="25dp"
        android:columnCount="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:checked="true"
            android:id="@+id/allNumbersCheck"
            android:text="@string/all_numbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:id="@+id/onlyEvensCheck"
            android:text="@string/only_even_numbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:id="@+id/onlyOddsCheck"
            android:text="@string/only_odd_numbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </GridLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@android:color/primary_text_light"
            android:textSize="20sp"
            android:text="@string/range"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/minValue"
                android:text="0"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/min"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:textColor="@android:color/primary_text_light"
            android:textSize="20sp"
            android:text="@string/to"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/maxValue"
                android:text="100"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/max"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/generateButton"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_a_new_random_number"
        android:textAllCaps="false"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/mainAd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="LARGE_BANNER"
        ads:adUnitId="ca-app-pub-9027801021996248/9708462305"/>

</LinearLayout>