<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Splash">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp">

        <ImageView
            android:src="@drawable/app_logo"
            android:contentDescription="@string/app_icon"
            android:layout_width="150dp"
            android:layout_height="150dp"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:text="@string/app_name"
        android:textSize="25sp"
        android:textColor="@android:color/primary_text_light"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/dev_name"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>